# polyarb

./: .env.example  .gitignore  Dockerfile.backend  TODOS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a3f1b2c4d5e6_add_kalshi_sdk_fields.py  b4e2f7a8c9d1_add_market_groups.py  c80de38fa1f9_initial_schema.py  d5a3e7f9b1c2_add_unique_price_snapshots.py  e6b4c8d2f3a7_add_group_question_trgm_index.py  f7c5d9e1a3b4_add_match_confidence_to_groups.py  g8d6e2f4a5b7_protect_price_history.py  h9e7f3a5b6c8_move_pricing_to_snapshots.py  i1a2b3c4d5e6_add_trading_bot_tables.py
app/: cache.py  categories.py  config.py  database.py  logging.py  main.py  utils.py
app/api/: admin.py  arbitrage.py  bots.py  deps.py  groups.py  health.py  markets.py  search.py  synonyms.py
app/connectors/: base.py  kalshi.py  polymarket.py
app/matching/: scorer.py  synonyms.py  text.py
app/models/: __init__.py  bot.py  group_snapshot.py  market.py  market_group.py  matched_market.py  platform.py  price_history.py
app/schemas/: arbitrage.py  common.py  group.py  market.py
app/services/: arbitrage_service.py  bot_service.py  embedding_service.py  group_service.py  live_search_service.py  market_service.py  matching_service.py  (+2 more)
config/: custom_synonyms.json  tag_noise.json  tag_verbs.json
frontend/: Dockerfile.frontend  next.config.ts  package-lock.json  package.json
tests/: conftest.py  test_backfill_prices.py  test_categories.py  test_groups_integration.py  test_logging.py  test_manual_pair.py  test_scorer.py  test_synonyms.py
(+85 files in other folders)
